--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Contador de combos",
   "description": "Esta extensión lleva un contador de combos",
-  "version": "1.0",
+  "version": "0.0.1",
   "content_scripts": [
     {
       "matches": [
@@ -13,7 +13,7 @@
       "js": ["content-script.js"]
     }
   ],
-  "browser_action": {
+  "action": {
     "default_icon": "icon.png"
   },
   "web_accessible_resources": [
