--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
   "action": {
     "default_icon": "icon.png"
   },
-  "web_accessible_resources": [
-    "fonts/PressStart2P-Regular.woff"
-    ]
+  "web_accessible_resources": [{
+    "resources":["fonts/PressStart2P-Regular.woff"],
+    "matches": ["<all_urls>"]
+  }]
 }
